src/objects/UST_Event__c.object
<CustomObject>
    <description>Parent Event object to setup individual Event Sessions</description>
    <fields>
        <fullName>Academic_Program_List__c</fullName>
        <description>List of selected academic programs.</description>
        <inlineHelpText>List of selected academic programs.</inlineHelpText>
        <label>Academic Program List</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Add_Info_Question_Pick_List_1__c</fullName>
        <description>return separated list that will be converted to a pick-list.</description>
        <inlineHelpText>return separated list that will be converted to a pick-list.</inlineHelpText>
        <label>Add Info Question Pick List 1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Add_Info_Question_Pick_List_2__c</fullName>
        <description>return separated list that will be converted to a pick-list.</description>
        <inlineHelpText>return separated list that will be converted to a pick-list.</inlineHelpText>
        <label>Add Info Question Pick List 2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Add_Info_Question_Pick_List_3__c</fullName>
        <description>return separated list that will be converted to a pick-list.</description>
        <inlineHelpText>return separated list that will be converted to a pick-list.</inlineHelpText>
        <label>Add Info Question Pick List 3</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Add_Info_Question_Text_1__c</fullName>
        <description>The text of the question you are asking.</description>
        <inlineHelpText>The text of the question you are asking.</inlineHelpText>
        <label>Add Info Question Text 1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Add_Info_Question_Text_2__c</fullName>
        <description>The text of the question you are asking.</description>
        <inlineHelpText>The text of the question you are asking.</inlineHelpText>
        <label>Add Info Question Text 2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Add_Info_Question_Text_3__c</fullName>
        <description>The text of the question you are asking.</description>
        <inlineHelpText>The text of the question you are asking.</inlineHelpText>
        <label>Add Info Question Text 3</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Add_Info_Question_Type_1__c</fullName>
        <description>What type of additional question input do you require. If pick-list you will need to provide values in the Add Info Question Pick-list.</description>
        <inlineHelpText>What type of additional question input do you require. If pick-list you will need to provide values in the Add Info Question Pick-list.</inlineHelpText>
        <label>Add Info Question Type 1</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Pick-list</fullName>
                </value>
                <value>
                    <fullName>Pick-list required</fullName>
                </value>
                <value>
                    <fullName>Text area</fullName>
                </value>
                <value>
                    <fullName>Text area required</fullName>
                </value>
                <value>
                    <fullName>Text box</fullName>
                </value>
                <value>
                    <fullName>Text box required</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Add_Info_Question_Type_2__c</fullName>
        <description>What type of additional question input do you require. If pick-list you will need to provide values in the Add Info Question Pick-list.</description>
        <inlineHelpText>What type of additional question input do you require. If pick-list you will need to provide values in the Add Info Question Pick-list.</inlineHelpText>
        <label>Add Info Question Type 2</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Pick-list</fullName>
                </value>
                <value>
                    <fullName>Pick-list required</fullName>
                </value>
                <value>
                    <fullName>Text area</fullName>
                </value>
                <value>
                    <fullName>Text area required</fullName>
                </value>
                <value>
                    <fullName>Text box</fullName>
                </value>
                <value>
                    <fullName>Text box required</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Add_Info_Question_Type_3__c</fullName>
        <description>What type of additional question input do you require. If pick-list you will need to provide values in the Add Info Question Pick-list.</description>
        <inlineHelpText>What type of additional question input do you require. If pick-list you will need to provide values in the Add Info Question Pick-list.</inlineHelpText>
        <label>Add Info Question Type 3</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Pick-list</fullName>
                </value>
                <value>
                    <fullName>Pick-list required</fullName>
                </value>
                <value>
                    <fullName>Text area</fullName>
                </value>
                <value>
                    <fullName>Text area required</fullName>
                </value>
                <value>
                    <fullName>Text box</fullName>
                </value>
                <value>
                    <fullName>Text box required</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Allow_Other_Attendees__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Activate allowing other attendees to the event in addition to primary attendee</description>
        <inlineHelpText>Activate allowing other attendees to the event in addition to primary attendee</inlineHelpText>
        <label>Allow Other Attendees</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ask_Gender__c</fullName>
        <description>Ask about a registrants gender</description>
        <inlineHelpText>Ask about a registrants gender</inlineHelpText>
        <label>Ask Gender</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Do not ask</fullName>
                </value>
                <value>
                    <fullName>Ask but do not require</fullName>
                </value>
                <value>
                    <fullName>Ask and require</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ask_If_Parent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Ask whether the person filling out is a parent or student. This will helps when a parent is signing up for a student to come to an event (we then capture both sets of data).</description>
        <inlineHelpText>Ask whether the person filling out is a parent or student. This will helps when a parent is signing up for a student to come to an event (we then capture both sets of data).</inlineHelpText>
        <label>Ask If Parent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Audience__c</fullName>
        <description>Choose the audience that this event is targeted.</description>
        <inlineHelpText>Choose the audience that this event is targeted.</inlineHelpText>
        <label>Audience</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>High School Senior</fullName>
                </value>
                <value>
                    <fullName>High School Junior or Younger</fullName>
                </value>
                <value>
                    <fullName>Transfer</fullName>
                </value>
                <value>
                    <fullName>First-Year International</fullName>
                </value>
                <value>
                    <fullName>Transfer International</fullName>
                </value>
                <value>
                    <fullName>Graduate Student</fullName>
                </value>
                <value>
                    <fullName>International Graduate Student</fullName>
                </value>
                <value>
                    <fullName>Prospective Graduate Student</fullName>
                </value>
                <value>
                    <fullName>Graduate Alumni</fullName>
                </value>
                <value>
                    <fullName>Graduate Public</fullName>
                </value>
                <value>
                    <fullName>Graduate Staff</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Building__c</fullName>
        <description>The  building the event is being hosted in.</description>
        <inlineHelpText>The  building the event is being hosted in.</inlineHelpText>
        <label>Building</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Buildings</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Close_Event_Days_Before__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The amount of days before the event that you want registration to close (accepting no new registrants)</description>
        <inlineHelpText>The amount of days before the event that you want registration to close (accepting no new registrants)</inlineHelpText>
        <label>Close Event Days Before</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>College_High_School_Ask__c</fullName>
        <description>Get High School and College information and last attended/graduation date.</description>
        <inlineHelpText>Get High School and College information and last attended/graduation date.</inlineHelpText>
        <label>College High School Ask</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Don&apos;t ask</fullName>
                </value>
                <value>
                    <fullName>Both College and HS</fullName>
                </value>
                <value>
                    <fullName>HS Only</fullName>
                </value>
                <value>
                    <fullName>College Only</fullName>
                </value>
                <value>
                    <fullName>Auto Select on Audience</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Community_Base_URL__c</fullName>
        <description>The base URL of the Salesforce community. This is not the start of the event app, just the start of the orgs community.</description>
        <formula>/* GET SUB-DOMAIN OF CURRENT SALESFORCE ORG - cs65  is dev, cs18 is staging, else production na54 which we will default to*/
CASE(

    /* Parse out the sub-domain of current org */
    RIGHT(
       LEFT($Api.Partner_Server_URL_260, FIND( &apos;.&apos;, $Api.Partner_Server_URL_260) - 1), 
       FIND(&apos;//&apos;, LEFT($Api.Partner_Server_URL_260, FIND( &apos;.&apos;, $Api.Partner_Server_URL_260) - 1)) - 3)
    /* End parse of sub-domain of current org */

    /* Start cases to apply hard coded base url of community */
    ,&apos;cs65&apos;, &apos;https://dev-stthomas.cs65.force.com/applicantportal/&apos;
    ,&apos;cs18&apos;, &apos;https://staging-stthomas.cs18.force.com/applicantportal/&apos;,
    &apos;https://stthomas.force.com/applicantportal/&apos;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The base URL of the Salesforce community. This is not the start of the event app, just the start of the orgs community.</inlineHelpText>
        <label>Community Base URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <description>Date event ends</description>
        <inlineHelpText>Date event ends</inlineHelpText>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Event_Appointment_Description__c</fullName>
        <description>If entered these instructions/description that appear before the appointment options section of the event</description>
        <inlineHelpText>If entered these instructions/description that appear before the appointment options section of the event</inlineHelpText>
        <label>Event Appointment Description</label>
        <length>3000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Event_Appointment_Title__c</fullName>
        <description>Title (heading) that appears before the appointments (if any) for the event.</description>
        <inlineHelpText>Title (heading) that appears before the appointments (if any) for the event.</inlineHelpText>
        <label>Event Appointment Title</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Event_Cancel_Review_Description__c</fullName>
        <description>The instructions on the cancel review page.</description>
        <inlineHelpText>The instructions on the cancel review page.</inlineHelpText>
        <label>Event Cancel Review Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Event_Cancel_Review_Title__c</fullName>
        <description>The title on the page for cancel an review</description>
        <inlineHelpText>The title on the page for cancel an review</inlineHelpText>
        <label>Event Cancel Review Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Cancelled_Notification_Text__c</fullName>
        <description>The text that appears to tell a client that their event is cancelled on the review cancel page.</description>
        <inlineHelpText>The text that appears to tell a client that their event is cancelled on the review cancel page.</inlineHelpText>
        <label>Event Cancelled Notification Text</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Event_Confirmation_Description__c</fullName>
        <description>The final page of the event registration. Thank for the registration and describe next steps.</description>
        <inlineHelpText>The final page of the event registration. Thank for the registration and describe next steps.</inlineHelpText>
        <label>Event Confirmation Description</label>
        <length>15000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Event_Confirmation_Title__c</fullName>
        <description>The title that appears on the confirmation page of the event process</description>
        <inlineHelpText>The title that appears on the confirmation page of the event process</inlineHelpText>
        <label>Event Confirmation Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Footer__c</fullName>
        <description>Footer that follows through event process. Can contain contact information for issues and information</description>
        <inlineHelpText>Footer that follows through event process. Can contain contact information for issues and information</inlineHelpText>
        <label>Event Footer</label>
        <length>3000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Event_Full_Text__c</fullName>
        <description>The text that appears when an event has reached capacity</description>
        <inlineHelpText>The text that appears when an event has reached capacity</inlineHelpText>
        <label>Event Is Full Display Text</label>
        <length>12768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Event_Home_Link_Title__c</fullName>
        <defaultValue>&apos;Event Home&apos;</defaultValue>
        <description>The title that will appear as a link at the top of the page to take you back to wherever you described the event on the Web.</description>
        <inlineHelpText>The title that will appear as a link at the top of the page to take you back to wherever you described the event on the Web.</inlineHelpText>
        <label>Event Home Link Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Home_Link_URL__c</fullName>
        <description>The link to the page that initiated the event registration.</description>
        <inlineHelpText>The link to the page that initiated the event registration.</inlineHelpText>
        <label>Event Home Link URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Instance_Feed_URL__c</fullName>
        <formula>Community_Base_URL__c + &apos;services/apexrest/usteventfeed?eventId=&apos; + Id + &apos;&amp;feedType=eventList&amp;viewStart=&apos; +  
TEXT(YEAR( Start_Date__c)) 
+ &apos;-&apos; + TEXT(MONTH( Start_Date__c))
+ &apos;-&apos; + TEXT(DAY(Start_Date__c))+ &apos;+00:00:00&apos; +
&apos;&amp;viewEnd=&apos; +
TEXT(YEAR( End_Date__c)) 
+ &apos;-&apos; + TEXT(MONTH( End_Date__c))
+ &apos;-&apos; + TEXT(DAY(End_Date__c)) + &apos;+24:59:59&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Event Instance Feed URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Name__c</fullName>
        <description>Event Name</description>
        <inlineHelpText>Name of the event</inlineHelpText>
        <label>Event Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Short_Listing_Description__c</fullName>
        <description>This description displays on concise list of events and should not be verbose</description>
        <inlineHelpText>This description displays on concise list of events and should not be verbose</inlineHelpText>
        <label>Event Short Listing Description</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Event_Status__c</fullName>
        <description>Status of event (Planning, Active, Inactive, Closed, Cancelled)</description>
        <inlineHelpText>Status of event (Planning, Active, Inactive, Closed, Cancelled)</inlineHelpText>
        <label>Event Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Active_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Event_Submit_Description__c</fullName>
        <description>This text appears at the top of the submit page where confirmation of selections is given and the user submits their registration.</description>
        <inlineHelpText>This text appears at the top of the submit page where confirmation of selections is given and the user submits their registration.</inlineHelpText>
        <label>Event Submit Description</label>
        <length>3000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Event_Submit_Title__c</fullName>
        <description>Title that appears on the event submit registration page</description>
        <inlineHelpText>Title that appears on the event submit registration page</inlineHelpText>
        <label>Event Submit Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Type__c</fullName>
        <description>The general event type this event fits into.</description>
        <inlineHelpText>The general event type this event fits into.</inlineHelpText>
        <label>Event Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Admissions Event</fullName>
                </value>
                <value>
                    <fullName>Class Visit</fullName>
                </value>
                <value>
                    <fullName>Coffee Chat</fullName>
                </value>
                <value>
                    <fullName>Counselor Meet-up</fullName>
                </value>
                <value>
                    <fullName>Info Session</fullName>
                </value>
                <value>
                    <fullName>Overnight</fullName>
                </value>
                <value>
                    <fullName>Visit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Event_description__c</fullName>
        <description>Description of Event</description>
        <inlineHelpText>Describe the event</inlineHelpText>
        <label>Event Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Include_Time_frame_List__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Ask the client for a general time-frame for event (drop down)</description>
        <inlineHelpText>Ask the client for a general time-frame for event (drop down)</inlineHelpText>
        <label>Include Time frame List</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Location_Address__c</fullName>
        <description>The address of the location the event is taking place.</description>
        <inlineHelpText>The address of the location the event is taking place.</inlineHelpText>
        <label>Location Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_Map_Link__c</fullName>
        <description>Link to a map (either campus map, google map, etc) of the location of the event.</description>
        <inlineHelpText>Link to a map (either campus map, google map, etc) of the location of the event.</inlineHelpText>
        <label>Location Map Link</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_Title__c</fullName>
        <description>Title of the location the event is taking place.</description>
        <inlineHelpText>Title of the location the event is taking place.</inlineHelpText>
        <label>Location Title</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_Type__c</fullName>
        <description>Campus the event will be hosted or off campus.</description>
        <inlineHelpText>Campus the event will be hosted or off campus.</inlineHelpText>
        <label>Location Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Minneapolis</fullName>
                </value>
                <value>
                    <fullName>Rome</fullName>
                </value>
                <value>
                    <fullName>St. Paul</fullName>
                </value>
                <value>
                    <fullName>St. Paul - North</fullName>
                </value>
                <value>
                    <fullName>St. Paul - South</fullName>
                </value>
                <value>
                    <fullName>Off Campus</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Max_Other_Attendees__c</fullName>
        <description>If other attendees is active, how many other attendees are allowed to this event</description>
        <inlineHelpText>If other attendees is active, how many other attendees are allowed to this event</inlineHelpText>
        <label>Max Other Attendees</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Portal_Login_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Requires a registrant to be logged in through our Student Portal.</description>
        <inlineHelpText>Requires a registrant to be logged in through our Student Portal.</inlineHelpText>
        <label>Portal Login Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Program_Filter__c</fullName>
        <description>Text version of program pick-list for filtering. No for user display or editing.</description>
        <inlineHelpText>Text version of program pick-list for filtering. No for user display or editing.</inlineHelpText>
        <label>Program Filter</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>School__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>School this event is representing.</description>
        <inlineHelpText>School this event is representing.</inlineHelpText>
        <label>School</label>
        <referenceTo>EnrollmentrxRx__School__c</referenceTo>
        <relationshipLabel>UST Events</relationshipLabel>
        <relationshipName>UST_Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <description>Date the event begins</description>
        <inlineHelpText>Date the event begins</inlineHelpText>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Template__c</fullName>
        <defaultValue>&apos;CastorTemplate2017&apos;</defaultValue>
        <description>Chose a pre-programmed template for your event site</description>
        <inlineHelpText>Chose a pre-programmed template for your event site</inlineHelpText>
        <label>Template</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CastorTemplate2017</fullName>
                </value>
                <value>
                    <fullName>OPUSTemplate2018</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>UST Event</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Event Label</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>UST Events</pluralLabel>
    <recordTypes>
        <fullName>Graduate</fullName>
        <active>true</active>
        <description>Graduate school events</description>
        <label>Graduate</label>
    </recordTypes>
    <recordTypes>
        <fullName>Undergraduate</fullName>
        <active>true</active>
        <description>Represents all undergrad interests in events</description>
        <label>Undergraduate</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>